<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_garden">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bottomnavigatonview.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.bottomnavigatonview.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.example.bottomnavigatonview.ui.log.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.bottomnavigatonview.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />
</navigation>